# MCM_B_problem

./: .gitignore  main.cpp  model.cpp
c/: CMakeLists.txt  model.cpp  model.h
python/: B_problem.py  CA.py
